test/error/error2.prc
// is not exhaustive
proc Main() =
    var x:string;
    ( x @ "abc" -> stop )
